<resources>
    <string name="app_name">TravelPortalService</string>
    <string name="desc_test_text">Nepal (English: /nɪˈpɔːl/;[17] Nepali: नेपाल [nepal]), officially the Federal Democratic Republic of Nepal (Nepali: सङ्घीय लोकतान्त्रिक गणतन्त्र नेपाल),[18] is a landlocked country in South Asia. It is mainly situated in the Himalayas, but also includes parts of the Indo-Gangetic Plain, bordering Tibet of China to the north, and India in the south, east, and west, while it is narrowly separated from Bangladesh by the Siliguri Corridor, and from Bhutan by the Indian state of Sikkim. Nepal has a diverse geography, including fertile plains, subalpine forested hills, and eight of the world\'s ten tallest mountains, including Mount Everest, the highest point on Earth. Nepal is a multi-ethnic, multi-lingual, multi-religious and multi-cultural state, with Nepali as the official language. Kathmandu is the nation\'s capital and the largest city.</string>
    <string name="tvque">jasdnfkksmd sdf asdfs</string>
    <string name="tvdes">sdfasdfsdger wrt qwrt ewrt e</string>
    <string name="txt_hint_search"><font size="18">Where are you going?</font></string>
    <string name="txt_date_hint"><font size="18">Fri, Oct 01 - Sat, Oct 02</font></string>
    <string name="txt_hint_room"><font size="18">1 room・1 adult・0 children</font></string>
    <string name="txt_search"><font size="18">Search</font></string>
    <string name="txt_profile">Profile</string>
    <string name="your_info">Your Information</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="card_number"><font size="16">Card Number</font></string>
    <string name="name_on_card"><font size="16">Name on Card</font></string>
    <string name="expiration_date"><font size="16">Expiration Date(MM/YY)</font></string>
    <string name="cvv"><font size="16">CVV</font></string>
</resources>